# templater

./: README.md  templater.cabal  templater.hs  templater.sh
