name: templater
version: 1.0.0
cabal-version: 1.12
license: AllRightsReserved
--license-file: ""
synopsis: Шаблонизатор
build-type: Simple

executable templater
    build-depends: QuickCheck -any, base -any, doctest -any, directory -any
                   , filepath -any, containers -any, regex-posix -any
                   , mtl -any, transformers -any
    main-is: templater.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    ghc-options: -ferror-spans
