name: templater
version: 1.0.0
cabal-version: 1.12
license: MIT
synopsis: Шаблонизатор для TeX
build-type: Simple

executable templater
    build-depends: QuickCheck -any, base -any, doctest -any, directory -any
                   , filepath -any, containers -any, regex-posix -any
                   , mtl -any, transformers -any
    main-is: templater.hs
    default-language: Haskell2010
